--- a/styles/board.css
+++ b/styles/board.css
@@ -1,3 +1,8 @@
+body {
+  background-color: rgba(246, 247, 248, 255);;
+}
+
+
 .gridContainerChildBoard {
   /* background-color: red; */
   display: grid;
