--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -450,6 +450,7 @@ body {
   border: 1px solid #2a3647;
 }
 
+.btn-resp-menu-contacts,
 .button-resp-back,
 .btn-resp-x,
 .btn-resp-add,
@@ -523,6 +524,32 @@ body {
     right: 0;
   }
 
+  .btn-resp-menu-contacts {
+    position: absolute;
+    bottom: 160px;
+    right: 30px;
+    display: block;
+    border: unset;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background-color: #2a3647;
+  }
+
+  .btn-resp-menu-contacts:hover {
+    background-color: #007cee;
+  }
+
+  .btn-resp-options {
+    width: 100%;
+    border: unset;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 16px;
+    gap: 4px;
+    background-color: #fff;
+  }
+
   .contacts-main {
     position: absolute;
     left: 0;
@@ -537,6 +564,33 @@ body {
     display: flex;
     flex-direction: column;
     gap: 4%;
+  }
+
+  .resp-show-options-background {
+    height: 25%;
+    width: 100%;
+    z-index: 20;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    background-color: rosybrown;
+    position: relative;
+  }
+
+  .resp-show-options-container {
+    border-radius: 10px;
+    position: absolute;
+    right: 4px;
+    bottom: 4px;
+    background-color: white;
+    width: 18%;
+    height: 55%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+    gap: 8px;
+    box-shadow: 0px 3px 15px -2px rgba(0, 0, 0, 0.14);
   }
 
   #dialogContact {
