--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -692,7 +692,7 @@ body {
   }
 }
 
-@media screen and (min-width: 760x) and (max-width: 1001px) {
+@media only screen and (min-width: 760px) and (max-width: 1001px) {
   .contacts-none {
     display: none;
   }
@@ -700,21 +700,42 @@ body {
   .resp-none {
     display: none !important;
   }
+
   .pos-btn {
     display: none;
+  }
+
+  .btn-resp-x {
+    display: block;
+    position: absolute;
+    background-color: transparent;
+    right: 0;
+    border: unset;
+    margin: 16px;
   }
 
   .btn-resp-add {
     display: block;
     position: absolute;
     right: 5%;
-    bottom: 20%;
+    bottom: 5%;
     border: unset;
     height: 80px;
     width: 80px;
     border-radius: 50%;
     background-color: #2a3647;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .button-resp-back {
+    display: block !important;
+    border: unset;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    background-color: #fff;
+    position: absolute;
+    right: 0;
   }
 
   .btn-resp-menu-contacts {
@@ -744,6 +765,7 @@ body {
 
   .resp-show-options-background {
     height: 25%;
+    bottom: 160px;
     width: 100%;
     z-index: 20;
     display: flex;
@@ -753,13 +775,13 @@ body {
     position: relative;
   }
 
-  /* .resp-show-options-container {
+  .resp-show-options-container {
     border-radius: 10px;
     position: absolute;
     right: 4px;
     bottom: 4px;
     background-color: white;
-    width: 18%;
+    width: 24%;
     height: 55%;
     display: flex;
     flex-direction: column;
@@ -767,7 +789,7 @@ body {
     justify-content: space-evenly;
     gap: 8px;
     box-shadow: 0px 3px 15px -2px rgba(0, 0, 0, 0.14);
-  } */
+  }
 
   #contactsListContainer {
     width: 100%;
@@ -779,15 +801,15 @@ body {
 
   .contacts-main {
     position: absolute;
-    height: calc(100% - 89px);
-    width: calc(100% - 240px);
+    height: calc(100% - 38px) !important;
+    width: calc(100% - 240px) !important;
     background-color: white;
   }
 
   #dialog__editContact,
   #dialog__createContact {
     flex-direction: column;
-    height: 80%;
+    height: 90%;
     top: 64px;
     top: 64px;
     width: 65%;
@@ -800,6 +822,12 @@ body {
   #dialog__editClose,
   #dialog__createClose {
     display: none !important;
+  }
+
+  
+  .dialog__editRightBtn,
+  .dialog__createRightBtn {
+    justify-content: center;
   }
 
   .dialog__editLeftSide,
@@ -820,5 +848,10 @@ body {
   .dialog__createRightImg {
     position: absolute;
     top: calc(50px - 50%);
+  }
+
+  .dialog__editRightForm,
+  .dialog__createRightForm {
+    width: 80%;
   }
 }
