created Logo top right

--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -58,6 +58,37 @@ header {
   display: none;
 }
 
+.top-right-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.logo-top-right {
+  cursor: pointer;
+  width: 56px;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid black;
+  border-radius: 56px;
+}
+
+.icon-question {
+  cursor: pointer;
+  object-fit: cover;
+  width: 32px;
+  height: 32px;
+}
+
+#logo-text-initials {
+  color: #31aee3;
+  margin: 0;
+  font-weight: 700;
+}
+
 .navChild > div {
   display: flex;
   padding-top: 8px;
@@ -101,8 +132,7 @@ header {
   }
 }
 
-
-@media(max-width: 760px) {
+@media (max-width: 760px) {
   nav {
     position: fixed;
     width: 100vw;
@@ -162,7 +192,6 @@ header {
     display: none;
   }
 }
-
 
 @media screen and (min-width: 320px) and (max-width: 420px) {
   nav {
