--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -43,14 +43,19 @@
     </nav>
 
     <header>
-
       <div class="header-text">Kanban Project Management Tool</div>
-      <div>
+      <div class="top-right-wrapper">
         <div class="resp-logo">
-          <img src="../img/logo_dark.svg">
+          <img src="../img/logo_dark.svg" />
         </div>
-        <img class="icon-question" src="../img/icon_question.png" alt="question" />
-        <img class="gap26px icon-user" src="../img/SM.png" alt="SM" />
+        <img
+          class="icon-question"
+          src="../img/icon_question.png"
+          alt="question"
+        />
+        <div class="logo-top-right">
+          <p id="logo-text-initials"></p>
+        </div>
       </div>
     </header>
   </div>
