--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -53,11 +53,18 @@
           src="../img/icon_question.png"
           alt="question"
         />
-        <div class="logo-top-right">
+        <div onclick="toggleHiddenDropdown()" class="logo-top-right">
           <p id="logo-text-initials"></p>
         </div>
       </div>
     </header>
+    <div id="sidebarDropdown" class="hiddenDropdown display-none">
+        <a href="../help.html" id="hiddenDropdown-help">Help</a>
+        <a href="../legal.html" id="hiddenDropdown-legal">Legal notice</a>
+        <a href="../privacy.html" id="hiddenDropdown-privacy">Privacy Policy</a>
+        <a href="../index.html" id="hiddenDropdown-logout">Log out</a>
+        <a href="../imprint.html" id="hiddenDropdown-imprint">Impressum</a>
+    </div>
   </div>
 </body>
 
