added eventListener, when clicked outside of the opend sidebar dropdown menu

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -53,7 +53,7 @@
           src="../img/icon_question.png"
           alt="question"
         />
-        <div onclick="toggleHiddenDropdown()" class="logo-top-right">
+        <div id="hiddenSidebarMenu" onclick="toggleHiddenDropdown()" class="logo-top-right">
           <p id="logo-text-initials"></p>
         </div>
       </div>
