--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -53,17 +53,26 @@
           src="../img/icon_question.png"
           alt="question"
         />
-        <div id="hiddenSidebarMenu" onclick="toggleHiddenDropdown()" class="logo-top-right">
+        <div
+          id="hiddenSidebarMenu"
+          onclick="toggleHiddenDropdown()"
+          onmouseover="toggleHiddenDropdown()"
+          class="logo-top-right"
+        >
           <p id="logo-text-initials"></p>
         </div>
       </div>
     </header>
-    <div id="sidebarDropdown" class="hiddenDropdown display-none">
-        <a href="../help.html" id="hiddenDropdown-help">Help</a>
-        <a href="../legal.html" id="hiddenDropdown-legal">Legal notice</a>
-        <a href="../privacy.html" id="hiddenDropdown-privacy">Privacy Policy</a>
-        <a href="../index.html" id="hiddenDropdown-logout">Log out</a>
-        <a href="../imprint.html" id="hiddenDropdown-imprint">Impressum</a>
+    <div
+      id="sidebarDropdown"
+      class="hiddenDropdown display-none"
+      onmouseleave="closeHiddenDropdown(event)"
+    >
+      <a href="../help.html" id="hiddenDropdown-help">Help</a>
+      <a href="../legal.html" id="hiddenDropdown-legal">Legal notice</a>
+      <a href="../privacy.html" id="hiddenDropdown-privacy">Privacy Policy</a>
+      <a href="../index.html" id="hiddenDropdown-logout">Log out</a>
+      <a href="../imprint.html" id="hiddenDropdown-imprint">Impressum</a>
     </div>
   </div>
 </body>
