--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,30 +7,30 @@
         </div>
 
         <div class="navChild w-100">
-          <div class="ps-5">
-            <a href="summary.html" class="link d-flex align-items-center">
+          <a class="ps-5" href="summary.html">
+            <div class="link d-flex align-items-center">
               <img src="../img/summary.svg" alt="summary" />
               <div class="link-text">Summary</div>
-            </a>
-          </div>
-          <div class="ps-5">
-            <a href="board.html" class="link d-flex align-items-center">
+            </div>
+          </a>
+          <a class="ps-5" href="board.html">
+            <div class="link d-flex align-items-center">
               <img src="../img/board.svg" alt="board" />
               <div class="link-text">Board</div>
-            </a>
-          </div>
-          <div class="ps-5">
-            <a href="addtask.html" class="link d-flex align-items-center">
+            </div>
+          </a>
+          <a class="ps-5" href="addtask.html">
+            <div class="link d-flex align-items-center">
               <img class="w-38" src="../img/addTask.svg" alt="add task" />
               <div class="link-text">Add Task</div>
-            </a>
-          </div>
-          <div class="ps-5">
-            <a href="contacts.html" class="link d-flex align-items-center">
+            </div>
+          </a>
+          <a class="ps-5" href="contacts.html">
+            <div class="link d-flex align-items-center">
               <img class="w-38" src="../img/contacts.svg" alt="contacts" />
               <div class="link-text">Contacts</div>
-            </a>
-          </div>
+            </div>
+          </a>
         </div>
       </div>
 
