mark the site your on as active

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,25 +7,25 @@
         </div>
 
         <div class="navChild w-100">
-          <a class="ps-5" href="summary.html">
+          <a class="ps-5 summary-site" href="summary.html">
             <div class="link d-flex align-items-center">
               <img src="../img/summary.svg" alt="summary" />
               <div class="link-text">Summary</div>
             </div>
           </a>
-          <a class="ps-5" href="board.html">
+          <a class="ps-5 board-site" href="board.html">
             <div class="link d-flex align-items-center">
               <img src="../img/board.svg" alt="board" />
               <div class="link-text">Board</div>
             </div>
           </a>
-          <a class="ps-5" href="addtask.html">
+          <a class="ps-5 addtask-site" href="addtask.html">
             <div class="link d-flex align-items-center">
               <img class="w-38" src="../img/addTask.svg" alt="add task" />
               <div class="link-text">Add Task</div>
             </div>
           </a>
-          <a class="ps-5" href="contacts.html">
+          <a class="ps-5 contact-site" href="contacts.html">
             <div class="link d-flex align-items-center">
               <img class="w-38" src="../img/contacts.svg" alt="contacts" />
               <div class="link-text">Contacts</div>
