fixed more links for server

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,19 +3,19 @@
     <nav>
       <div class="w-100 d-flex flex-column align-items-center">
         <div class="logoDiv">
-          <img src="../img/logo.svg" alt="JOIN" />
+          <img src="./img/logo.svg" alt="JOIN" />
         </div>
 
         <div class="navChild w-100">
           <a class="ps-5 summary-site" href="summary.html">
             <div class="link d-flex align-items-center">
-              <img src="../img/summary.svg" alt="summary" />
+              <img src="./img/summary.svg" alt="summary" />
               <div class="link-text">Summary</div>
             </div>
           </a>
           <a class="ps-5 board-site" href="board.html">
             <div class="link d-flex align-items-center">
-              <img src="../img/board.svg" alt="board" />
+              <img src="./img/board.svg" alt="board" />
               <div class="link-text">Board</div>
             </div>
           </a>
@@ -27,7 +27,7 @@
           </a>
           <a class="ps-5 contact-site" href="contacts.html">
             <div class="link d-flex align-items-center">
-              <img class="w-38" src="../img/contacts.svg" alt="contacts" />
+              <img class="w-38" src="./img/contacts.svg" alt="contacts" />
               <div class="link-text">Contacts</div>
             </div>
           </a>
@@ -50,11 +50,11 @@
       <div class="header-text">Kanban Project Management Tool</div>
       <div class="top-right-wrapper">
         <div class="resp-logo">
-          <img src="../img/logo_dark.svg" />
+          <img src="./img/logo_dark.svg" />
         </div>
         <img
           class="icon-question"
-          src="../img/icon_question.png"
+          src="./img/icon_question.png"
           alt="question"
         />
         <div
