add Task Link img fixed

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -21,7 +21,7 @@
           </a>
           <a class="ps-5 addtask-site" href="addtask.html">
             <div class="link d-flex align-items-center">
-              <img class="w-38" src="../img/addTask.svg" alt="add task" />
+              <img class="w-38" src="./img/addTask.svg" alt="add task" />
               <div class="link-text">Add Task</div>
             </div>
           </a>
